# Exonum-Neo4j

./: .gitignore  README.md  neo4j.proto
backend/: INSTALL_DESC  Makefile  README.md  build.rs  curlTests  finalizeTesting.sh  genCommonConfigTesting.sh  neo4j.toml  reConf.sh  reConfTestNode.sh  reConfTestNode3.sh  run.sh  runSingle.sh  runTestNode.sh  runTestNode1.sh  runTestNode2.sh
backend/src/: api.rs  lib.rs  main.rs  neo4j.rs  schema.rs  structures.rs  transactions.rs  util.rs
backend/tests/: transaction_test_server.rs  tx_logic.rs
docker/: Dockerfile  README.md  demo.md  frontend_startup.bat  linux_startup.sh  unix_startup.sh  windows_startup.bat
docker/clippy/: Dockerfile  (+1 more)
exonum-neo4j-service/: Cargo.toml  README.md  build.rs  curlTests  finalizeTesting.sh  genCommonConfigTesting.sh  neo4j.toml  reConf.sh  reConfSingle.sh  reConfTestNode1.sh  reConfTestNode2.sh  reConfTestNode3.sh  reConfTestNode4.sh  run.sh  runSingle.sh  runTestNode1.sh  runTestNode2.sh  runTestNode3.sh  runTestNode4.sh
exonum-neo4j-service/src/: api.rs  gRPCProtocol.rs  gRPCProtocol_grpc.rs  lib.rs  main.rs  neo4j.rs  neo4j_client.rs  proto.rs  schema.rs  structures.rs  testValue.rs  transactions.rs  util.rs
exonum-neo4j-service/tests/: neo4j_connections.rs  transaction_test_server.rs  tx_logic.rs
frontend/: .env  README.md  copyKeys.sh  example.env  genEnv.sh  package-lock.json  package.json  server.js  webpack.config.js
integration_tests/: README.md  complex_modify_suc_transaction.postman_collection.json  exonum_neo4j.postman_environment.json  multiquery_fail_transaction.postman_collection.json  multiquery_suc_transaction.postman_collection.json  reset.bat  run_integration_tests.bat  simple_fail_transaction.postman_collection.json  simple_suc_transaction.postman_collection.json  startup.bat
neo4j-exonum-extension/: pom.xml
neo4j-transaction-manager/: README.md
plugin/: README.md  checkstyle.xml  pom.xml
proto/: neo4j_service.proto  transaction_manager.proto
protobuff-rust/: Cargo.toml
(+59 files in other folders)
