[package]
name = "exonum-neo4j"
version = "0.1.0"
authors = ["Indrek Klangberg","Silver Vapper","Sjoerd Wels"]
repository = "https://github.com/sjoerdwels/Exonum-Neo4j"
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = ["exonum", "neo4j"]
categories = ["graphdatabase", "blockchain","consensus"]
description = "Neo4j services for exonum."

[dependencies]
exonum = "0.9.0"
exonum-configuration = "0.9.0"
serde = "1.0.0"
serde_derive = "1.0.0"
failure = "0.1.2"

[dev-dependencies]
serde_json = "1.0.0"
pretty_assertions = "=0.5.1"
assert_matches = "1.2.0"
hex = "=0.3.2"
