[package]
name = "exonum-neo4j"
version = "0.1.0"
authors = ["Indrek Klangberg","Silver Vapper","Sjoerd Wels"]
repository = "https://github.com/sjoerdwels/Exonum-Neo4j"
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = ["exonum", "neo4j"]
categories = ["graphdatabase", "blockchain","consensus"]
description = "Neo4j services for exonum."

[dependencies]
exonum = "0.9.0"
exonum-configuration = "0.9.0"
serde = "1.0.0"
serde_derive = "1.0.0"
failure = "0.1.2"
tls-api = "0.1.*"
tls-api-native-tls = "0.1.*"
toml = "*"
protobuf = "2.2.0"
grpc = "0.6.1"

[dev-dependencies]
exonum-testkit = "0.9.0"
serde_json = "1.0.0"
pretty_assertions = "=0.5.1"
assert_matches = "1.2.0"
hex = "=0.3.2"

[build-dependencies]
exonum-build = "0.10.0"
protoc-rust-grpc = "0.6.1"